--- a/Mona/tools/Makefile
+++ b/Mona/tools/Makefile
@@ -1,10 +1,13 @@
 all:
 	@cd fat_write; $(MAKE) $@
+	@cd bit2mnf; $(MAKE) $@
 
 clean:
 	@cd fat_write; $(MAKE) $@
+	@cd bit2mnf; $(MAKE) $@
 
 install:
+	@cd bit2mnf; $(MAKE) $@
 
 depend:
 	@cd fat_write; $(MAKE) $@
