--- a/Mona/apps/gui/Makefile
+++ b/Mona/apps/gui/Makefile
@@ -1,15 +1,19 @@
 all:
 	@cd reversi; $(MAKE) $@
 	@cd ps; $(MAKE) $@
+	@cd 2chAA; $(MAKE) $@
 
 install:
 	@cd reversi; $(MAKE) $@
 	@cd ps; $(MAKE) $@
+	@cd 2chAA; $(MAKE) $@
 
 clean:
 	@cd reversi; $(MAKE) $@
 	@cd ps; $(MAKE) $@
+	@cd 2chAA; $(MAKE) $@
 
 depend:
 	@cd reversi; $(MAKE) $@
 	@cd ps; $(MAKE) $@
+	@cd 2chAA; $(MAKE) $@
