Modified Files: 	include/gui/System/Mona/Forms/Control.h 	src/lib/gui/System/Mona/Forms/Control.cpp Added Files: 	apps/gui/noiz2bg/Form1.cpp apps/gui/noiz2bg/Makefile 	apps/gui/noiz2bg/dependencies apps/gui/noiz2bg/noiz2bg.cpp

--- a/Mona/apps/gui/Makefile
+++ b/Mona/apps/gui/Makefile
@@ -2,18 +2,22 @@ all:
 	@cd reversi; $(MAKE) $@
 	@cd ps; $(MAKE) $@
 	@cd 2chAA; $(MAKE) $@
+	@cd noiz2bg; $(MAKE) $@
 
 install:
 	@cd reversi; $(MAKE) $@
 	@cd ps; $(MAKE) $@
 	@cd 2chAA; $(MAKE) $@
+	@cd noiz2bg; $(MAKE) $@
 
 clean:
 	@cd reversi; $(MAKE) $@
 	@cd ps; $(MAKE) $@
 	@cd 2chAA; $(MAKE) $@
+	@cd noiz2bg; $(MAKE) $@
 
 depend:
 	@cd reversi; $(MAKE) $@
 	@cd ps; $(MAKE) $@
 	@cd 2chAA; $(MAKE) $@
+	@cd noiz2bg; $(MAKE) $@
