Modified Files: 	ChangeLog apps/gui/Makefile Added Files: 	apps/gui/fire/Form1.cpp apps/gui/fire/Makefile 	apps/gui/fire/dependencies apps/gui/fire/fire.asm

--- a/Mona/apps/gui/Makefile
+++ b/Mona/apps/gui/Makefile
@@ -3,21 +3,25 @@ all:
 	@cd ps; $(MAKE) $@
 	@cd 2chAA; $(MAKE) $@
 	@cd noiz2bg; $(MAKE) $@
+	@cd fire; $(MAKE) $@
 
 install:
 	@cd reversi; $(MAKE) $@
 	@cd ps; $(MAKE) $@
 	@cd 2chAA; $(MAKE) $@
 	@cd noiz2bg; $(MAKE) $@
+	@cd fire; $(MAKE) $@
 
 clean:
 	@cd reversi; $(MAKE) $@
 	@cd ps; $(MAKE) $@
 	@cd 2chAA; $(MAKE) $@
 	@cd noiz2bg; $(MAKE) $@
+	@cd fire; $(MAKE) $@
 
 depend:
 	@cd reversi; $(MAKE) $@
 	@cd ps; $(MAKE) $@
 	@cd 2chAA; $(MAKE) $@
 	@cd noiz2bg; $(MAKE) $@
+	@cd fire; $(MAKE) $@
