--- a/Mona/Makefile.in
+++ b/Mona/Makefile.in
@@ -22,6 +22,7 @@ install:
 	$(BINDIR)/fat_write.exe $(BINDIR)/mona.img $(BINDIR)/root/AUTOEXEC.MSH AUTOEXEC.MSH
 	$(BINDIR)/fat_write.exe $(BINDIR)/mona.img $(BINDIR)/root/MONA.CFG MONA.CFG
 	$(BINDIR)/fat_write.exe $(BINDIR)/mona.img $(BINDIR)/root/NEKO.JPG NEKO.JPG
+	$(BINDIR)/fat_write.exe $(BINDIR)/mona.img $(BINDIR)/root/STARTING.JPG STARTING.JPG
 	$(BINDIR)/fat_write.exe $(BINDIR)/mona.img $(BINDIR)/root/BLACK.BMP BLACK.BMP
 	$(BINDIR)/fat_write.exe $(BINDIR)/mona.img $(BINDIR)/root/WHITE.BMP WHITE.BMP
 	$(BINDIR)/fat_write.exe $(BINDIR)/mona.img $(BINDIR)/root/MONA-12.MNF MONA-12.MNF
@@ -48,5 +49,5 @@ distclean: clean
 	rm -f Makefile
 	rm -f env/Makefile.inc
 
-write :
+write:
 	cp $(TARGET) /dev/fd0
