Modified Files: 	ChangeLog apps/non-gui/jpegdemo/Makefile 	apps/non-gui/jpegdemo/dependencies src/lib/Makefile 	src/lib/gui/Makefile src/lib/monalibc/Makefile 	src/lib/monapi/Makefile Added Files: 	include/jpegls.h src/lib/jpegls/Makefile 	src/lib/jpegls/dct_tab src/lib/jpegls/dependencies 	src/lib/jpegls/jpegls.cpp Removed Files: 	apps/non-gui/jpegdemo/dct_tab apps/non-gui/jpegdemo/jpegls.cpp 	apps/non-gui/jpegdemo/jpegls.h

--- a/Mona/apps/non-gui/jpegdemo/Makefile
+++ b/Mona/apps/non-gui/jpegdemo/Makefile
@@ -1,11 +1,11 @@
 TARGET  = JPEGDEMO.ELF
-SOURCES = jpegls.cpp jpegdemo.cpp
+SOURCES = jpegdemo.cpp
 
 MONADIR = ../../..
 include $(MONADIR)/env/monapi.inc
 
 INCLUDE = -I$(INCDIR) -I.
-LINK    = -lmonapi -lmonalibc
+LINK    = -lmonapi -lmonalibc -ljpegls
 
 all: $(TARGET)
 
