--- a/Mona/src/lib/Makefile
+++ b/Mona/src/lib/Makefile
@@ -2,16 +2,23 @@ all:
 	@cd monapi; $(MAKE) $@
 	@cd monalibc; $(MAKE) $@
 	@cd gui; $(MAKE) $@
+	@cd jpegls; $(MAKE) $@
 
 install:
+	@cd monapi; $(MAKE) $@
+	@cd monalibc; $(MAKE) $@
+	@cd gui; $(MAKE) $@
+	@cd jpegls; $(MAKE) $@
 
 clean:
 	@cd monapi; $(MAKE) $@
 	@cd monalibc; $(MAKE) $@
 	@cd gui; $(MAKE) $@
+	@cd jpegls; $(MAKE) $@
 	rm -f ../../lib/*.a
 
 depend:
 	@cd monapi; $(MAKE) $@
 	@cd monalibc; $(MAKE) $@
 	@cd gui; $(MAKE) $@
+	@cd jpegls; $(MAKE) $@
