--- a/Mona/apps/non-gui/Makefile
+++ b/Mona/apps/non-gui/Makefile
@@ -2,7 +2,7 @@ all:
 	@cd noiz2bg; $(MAKE) $@
 	@cd reversi; $(MAKE) $@
 	@cd jpegdemo; $(MAKE) $@
-	@cd clock; $(MAKE) $@
+#	@cd clock; $(MAKE) $@
 	@cd nic; $(MAKE) $@
 	@cd waba; $(MAKE) $@
 
@@ -10,7 +10,7 @@ install:
 	@cd noiz2bg; $(MAKE) $@
 	@cd reversi; $(MAKE) $@
 	@cd jpegdemo; $(MAKE) $@
-	@cd clock; $(MAKE) $@
+#	@cd clock; $(MAKE) $@
 	@cd nic; $(MAKE) $@
 	@cd waba; $(MAKE) $@
 
@@ -18,7 +18,7 @@ clean:
 	@cd noiz2bg; $(MAKE) $@
 	@cd reversi; $(MAKE) $@
 	@cd jpegdemo; $(MAKE) $@
-	@cd clock; $(MAKE) $@
+#	@cd clock; $(MAKE) $@
 	@cd nic; $(MAKE) $@
 	@cd waba; $(MAKE) $@
 
@@ -26,6 +26,6 @@ depend:
 	@cd noiz2bg; $(MAKE) $@
 	@cd reversi; $(MAKE) $@
 	@cd jpegdemo; $(MAKE) $@
-	@cd clock; $(MAKE) $@
+#	@cd clock; $(MAKE) $@
 	@cd nic; $(MAKE) $@
 	@cd waba; $(MAKE) $@
