--- a/Mona/env/mingw.env
+++ b/Mona/env/mingw.env
@@ -7,3 +7,4 @@ AR       = ar cvru
 RANLIB   = ranlib
 CXXFLAGS = -nostdlib -fno-exceptions  -fno-rtti -Wall -O3
 EXEEXT   = .exe
+USER_START_FUNCTION = _user_start
