Modified Files: 	ChangeLog apps/gui/2chAA/Form1.cpp apps/gui/ps/Form1.cpp 	apps/gui/reversi/ReversiBoard.cpp 	apps/gui/reversi/ReversiBoard.h 	apps/gui/reversi/ReversiForm.cpp samples/gui/button/Form1.cpp 	samples/gui/label/Form1.cpp samples/non-gui/Makefile Added Files: 	samples/non-gui/kanji/.cvsignore 	samples/non-gui/kanji/Makefile 	samples/non-gui/kanji/dependencies 	samples/non-gui/kanji/kanji.cpp

--- a/Mona/samples/non-gui/Makefile
+++ b/Mona/samples/non-gui/Makefile
@@ -1,11 +1,15 @@
 all:
 	@cd hello; $(MAKE) $@
+	@cd kanji; $(MAKE) $@
 
 install:
 	@cd hello; $(MAKE) $@
+	#@cd kanji; $(MAKE) $@
 
 clean:
 	@cd hello; $(MAKE) $@
+	@cd kanji; $(MAKE) $@
 
 depend:
 	@cd hello; $(MAKE) $@
+	@cd kanji; $(MAKE) $@
