--- a/Mona/env/cygwin.env
+++ b/Mona/env/cygwin.env
@@ -7,4 +7,5 @@ AR       = ar cvru
 RANLIB   = ranlib
 CXXFLAGS = -nostdlib -fno-exceptions  -fno-rtti -Wall -O3 -DDEBUG_BUILD
 EXEEXT   = .exe
+NFLAGS   = -f win32
 USER_START_FUNCTION = _user_start
