--- a/Mona/env/linux2.x.env
+++ b/Mona/env/linux2.x.env
@@ -6,6 +6,6 @@ STRIP    = strip
 AR       = ar cvru
 RANLIB   = ranlib
 CXXFLAGS = -nostdlib -fno-exceptions -fno-rtti -fno-builtin -Wall -c -DNO_NEW_DELETE -DGCC29 -O3
-NFLAGS   = -DBUILD_ON_LINUX
+NFLAGS   = -DBUILD_ON_LINUX -f elf
 EXEEXT   =
 USER_START_FUNCTION = user_start
