Modified Files: 	bin/root/MONA.CFG src/servers/gui/main.cpp

--- a/Mona/bin/root/MONA.CFG
+++ b/Mona/bin/root/MONA.CFG
@@ -2,3 +2,6 @@ SERVER=/SERVERS/KEYBDMNG.SVR
 SERVER=/SERVERS/MOUSE.SVR
 SERVER=/SERVERS/GUI.SVR
 SERVER=/SERVERS/SHELL.SVR
+
+WALLPAPER_SOURCE=/STARTING.JPG
+WALLPAPER_POSITION=9
