--- a/Mona/tools/Makefile
+++ b/Mona/tools/Makefile
@@ -1,10 +1,12 @@
 all:
 	@cd fat_write; $(MAKE) $@
 	@cd bit2mnf; $(MAKE) $@
+	@cd monaelf; $(MAKE) $@
 
 clean:
 	@cd fat_write; $(MAKE) $@
 	@cd bit2mnf; $(MAKE) $@
+	@cd monaelf; $(MAKE) $@
 
 install:
 	@cd bit2mnf; $(MAKE) $@
