Modified Files: 	tools/Makefile

--- a/Mona/tools/Makefile
+++ b/Mona/tools/Makefile
@@ -8,8 +8,12 @@ clean:
 	@cd bit2mnf; $(MAKE) $@
 	@cd monaelf; $(MAKE) $@
 
+distclean:
+	rm -f fat_write/dependencies
+
 install:
 	@cd bit2mnf; $(MAKE) $@
 
 depend:
+	touch fat_write/dependencies
 	@cd fat_write; $(MAKE) $@
