Modified Files: 	Makefile.in configure Removed Files: 	tools/fat_write/dependencies

--- a/Mona/Makefile.in
+++ b/Mona/Makefile.in
@@ -46,6 +46,10 @@ depend:
 	@cd samples; $(MAKE) $@
 
 distclean: clean
+	@cd tools; $(MAKE) $@
+	@cd src; $(MAKE) $@
+	@cd apps; $(MAKE) $@
+	@cd samples; $(MAKE) $@
 	rm -f Makefile
 	rm -f env/Makefile.inc
 
