Modified Files: 	tools/Makefile

--- a/Mona/tools/Makefile
+++ b/Mona/tools/Makefile
@@ -3,17 +3,19 @@ all:
 	@cd bit2mnf; $(MAKE) $@
 	@cd monaelf; $(MAKE) $@
 
-clean:
+clean: touchdepend
 	@cd fat_write; $(MAKE) $@
 	@cd bit2mnf; $(MAKE) $@
 	@cd monaelf; $(MAKE) $@
 
-distclean:
+distclean: clean
 	rm -f fat_write/dependencies
 
 install:
 	@cd bit2mnf; $(MAKE) $@
 
-depend:
-	touch fat_write/dependencies
+depend: touchdepend
 	@cd fat_write; $(MAKE) $@
+
+touchdepend:
+	touch fat_write/dependencies
