Modified Files: 	src/Makefile tools/Makefile tools/fat_write/.cvsignore

--- a/Mona/src/Makefile
+++ b/Mona/src/Makefile
@@ -13,6 +13,11 @@ clean:
 	@cd lib; $(MAKE) $@
 	@cd servers; $(MAKE) $@
 
+distclean:
+	@cd kernel; $(MAKE) $@
+	@cd lib; $(MAKE) $@
+	@cd servers; $(MAKE) $@
+
 depend:
 	@cd kernel; $(MAKE) $@
 	@cd lib; $(MAKE) $@
