Modified Files: 	src/Makefile src/lib/Makefile src/lib/monalibc/.cvsignore 	src/lib/monapi/.cvsignore Added Files: 	src/lib/gui/.cvsignore src/lib/jpegls/.cvsignore Removed Files: 	src/lib/gui/dependencies src/lib/jpegls/dependencies 	src/lib/monalibc/dependencies src/lib/monapi/dependencies

--- a/Mona/src/Makefile
+++ b/Mona/src/Makefile
@@ -18,7 +18,7 @@ distclean:
 	@cd lib; $(MAKE) $@
 	@cd servers; $(MAKE) $@
 
-depend:
+depend: touchdepend
 	@cd kernel; $(MAKE) $@
 	@cd lib; $(MAKE) $@
 	@cd servers; $(MAKE) $@
