Modified Files: 	src/servers/Makefile src/servers/1linesh/.cvsignore 	src/servers/gui/.cvsignore src/servers/key/.cvsignore 	src/servers/mouse/.cvsignore src/servers/shell/.cvsignore Removed Files: 	src/servers/1linesh/dependencies src/servers/gui/dependencies 	src/servers/key/dependencies src/servers/mouse/dependencies 	src/servers/shell/dependencies

--- a/Mona/src/servers/Makefile
+++ b/Mona/src/servers/Makefile
@@ -12,17 +12,30 @@ install:
 	@cd gui; $(MAKE) $@
 	@cd 1linesh; $(MAKE) $@
 
-clean:
+clean: touchdepend
 	@cd key; $(MAKE) $@
 	@cd mouse; $(MAKE) $@
 	@cd shell; $(MAKE) $@
 	@cd gui; $(MAKE) $@
 	@cd 1linesh; $(MAKE) $@
 
-depend:
+distclean:
+	rm -f key/dependencies
+	rm -f mouse/dependencies
+	rm -f shell/dependencies
+	rm -f gui/dependencies
+	rm -f 1linesh/dependencies
+
+depend: touchdepend
 	@cd key; $(MAKE) $@
 	@cd mouse; $(MAKE) $@
 	@cd shell; $(MAKE) $@
 	@cd gui; $(MAKE) $@
 	@cd 1linesh; $(MAKE) $@
 
+touchdepend:
+	touch key/dependencies
+	touch mouse/dependencies
+	touch shell/dependencies
+	touch gui/dependencies
+	touch 1linesh/dependencies
