Modified Files: 	apps/Makefile apps/gui/Makefile apps/gui/2chAA/.cvsignore 	apps/gui/fire/.cvsignore apps/gui/launcher/.cvsignore 	apps/gui/noiz2bg/.cvsignore apps/gui/ps/.cvsignore 	apps/gui/reversi/.cvsignore apps/non-gui/Makefile 	apps/non-gui/clock/.cvsignore apps/non-gui/jpegdemo/.cvsignore 	apps/non-gui/nic/Makefile apps/non-gui/nic/ne2k/.cvsignore 	apps/non-gui/noiz2bg/.cvsignore 	apps/non-gui/reversi/.cvsignore apps/non-gui/waba/.cvsignore 	src/Makefile src/lib/Makefile src/servers/Makefile 	tools/Makefile Removed Files: 	apps/gui/2chAA/dependencies apps/gui/fire/dependencies 	apps/gui/launcher/dependencies apps/gui/noiz2bg/dependencies 	apps/gui/ps/dependencies apps/gui/reversi/dependencies 	apps/non-gui/clock/dependencies 	apps/non-gui/jpegdemo/dependencies 	apps/non-gui/nic/ne2k/dependencies 	apps/non-gui/noiz2bg/dependencies 	apps/non-gui/reversi/dependencies 	apps/non-gui/waba/dependencies

--- a/Mona/apps/non-gui/Makefile
+++ b/Mona/apps/non-gui/Makefile
@@ -6,7 +6,6 @@ all:
 	@cd nic; $(MAKE) $@
 	@cd waba; $(MAKE) $@
 
-
 install:
 	@cd noiz2bg; $(MAKE) $@
 	@cd reversi; $(MAKE) $@
@@ -16,7 +15,7 @@ install:
 	@cd waba; $(MAKE) $@
 	@cd tube; $(MAKE) $@
 
-clean:
+clean: touchdepend
 	@cd noiz2bg; $(MAKE) $@
 	@cd reversi; $(MAKE) $@
 	@cd jpegdemo; $(MAKE) $@
@@ -25,11 +24,25 @@ clean:
 	@cd waba; $(MAKE) $@
 	@cd tube; $(MAKE) $@
 
-depend:
+depend: touchdepend
 	@cd noiz2bg; $(MAKE) $@
 	@cd reversi; $(MAKE) $@
 	@cd jpegdemo; $(MAKE) $@
 #	@cd clock; $(MAKE) $@
 	@cd nic; $(MAKE) $@
 	@cd waba; $(MAKE) $@
-#	@cd tube; $(MAKE) $@
+
+distclean:
+	rm -f noiz2bg/dependencies
+	rm -f reversi/dependencies
+	rm -f jpegdemo/dependencies
+#	rm -f clock/dependencies
+	rm -f waba/dependencies
+	@cd nic; $(MAKE) $@
+
+touchdepend:
+	touchdepend noiz2bg/dependencies
+	touchdepend reversi/dependencies
+	touchdepend jpegdemo/dependencies
+#	touchdepend clock/dependencies
+	touchdepend waba/dependencies
