Modified Files: 	ChangeLog samples/Makefile samples/gui/Makefile 	samples/gui/bitmap/.cvsignore samples/gui/button/.cvsignore 	samples/gui/label/.cvsignore samples/non-gui/Makefile 	samples/non-gui/hello/.cvsignore 	samples/non-gui/kanji/.cvsignore Removed Files: 	samples/gui/bitmap/dependencies 	samples/gui/button/dependencies samples/gui/label/dependencies 	samples/non-gui/hello/dependencies 	samples/non-gui/kanji/dependencies

--- a/Mona/samples/gui/Makefile
+++ b/Mona/samples/gui/Makefile
@@ -8,12 +8,22 @@ install:
 	@cd label; $(MAKE) $@
 	@cd bitmap; $(MAKE) $@
 
-clean:
+clean: touchdepend
 	@cd button; $(MAKE) $@
 	@cd label; $(MAKE) $@
 	@cd bitmap; $(MAKE) $@
 
-depend:
+depend: touchdepend
 	@cd button; $(MAKE) $@
 	@cd label; $(MAKE) $@
 	@cd bitmap; $(MAKE) $@
+
+distclean:
+	rm -f button/dependencies
+	rm -f label/dependencies
+	rm -f bitmap/dependencies
+
+touchdepend:
+	touch button/dependencies
+	touch label/dependencies
+	touch bitmap/dependencies
