Modified Files: 	ChangeLog Makefile.in include/monapi/FileInputStream.h 	include/monapi/FileOutputStream.h include/monapi/Message.h 	src/lib/gui/System/Drawing/Bitmap.cpp 	src/lib/gui/System/Mona/Forms/Application.cpp 	src/lib/gui/System/Mona/Forms/Control.cpp 	src/lib/monapi/FileInputStream.cpp 	src/lib/monapi/FileOutputStream.cpp src/lib/monapi/Message.cpp 	src/lib/monapi/monapi.cpp src/servers/gui/main.cpp 	src/servers/mouse/main.cpp Added Files: 	include/gui/messages.h

--- a/Mona/Makefile.in
+++ b/Mona/Makefile.in
@@ -17,17 +17,7 @@ install:
 	@cd src; $(MAKE) $@
 	@cd apps; $(MAKE) $@
 	@cd samples; $(MAKE) $@
-	for file in $(ELF_FILES); do $(BINDIR)/fat_write.exe $(BINDIR)/mona.img $$file APPS/`basename $$file`; done
-	for file in $(SVR_FILES); do $(BINDIR)/fat_write.exe $(BINDIR)/mona.img $$file SERVERS/`basename $$file`; done
-	$(BINDIR)/fat_write.exe $(BINDIR)/mona.img $(BINDIR)/root/AUTOEXEC.MSH AUTOEXEC.MSH
-	$(BINDIR)/fat_write.exe $(BINDIR)/mona.img $(BINDIR)/root/MONA.CFG MONA.CFG
-	$(BINDIR)/fat_write.exe $(BINDIR)/mona.img $(BINDIR)/root/NEKO.JPG NEKO.JPG
-	$(BINDIR)/fat_write.exe $(BINDIR)/mona.img $(BINDIR)/root/STARTING.JPG STARTING.JPG
-	$(BINDIR)/fat_write.exe $(BINDIR)/mona.img $(BINDIR)/root/BLACK.BMP BLACK.BMP
-	$(BINDIR)/fat_write.exe $(BINDIR)/mona.img $(BINDIR)/root/WHITE.BMP WHITE.BMP
-	$(BINDIR)/fat_write.exe $(BINDIR)/mona.img $(BINDIR)/root/MONA-12.MNF MONA-12.MNF
-	$(BINDIR)/fat_write.exe $(BINDIR)/mona.img $(APPSDIR)/non-gui/waba/WABA.LIB  APPS/WABA.LIB
-	$(BINDIR)/fat_write.exe $(BINDIR)/mona.img $(APPSDIR)/non-gui/waba/HELLO.WRP APPS/HELLO.WRP
+	@$(MAKE) image
 
 clean:
 	@cd tools; $(MAKE) $@
@@ -52,6 +42,19 @@ distclean: clean
 	@cd samples; $(MAKE) $@
 	rm -f Makefile
 	rm -f env/Makefile.inc
+
+image:
+	for file in $(ELF_FILES); do $(BINDIR)/fat_write.exe $(BINDIR)/mona.img $$file APPS/`basename $$file`; done
+	for file in $(SVR_FILES); do $(BINDIR)/fat_write.exe $(BINDIR)/mona.img $$file SERVERS/`basename $$file`; done
+	$(BINDIR)/fat_write.exe $(BINDIR)/mona.img $(BINDIR)/root/AUTOEXEC.MSH AUTOEXEC.MSH
+	$(BINDIR)/fat_write.exe $(BINDIR)/mona.img $(BINDIR)/root/MONA.CFG MONA.CFG
+	$(BINDIR)/fat_write.exe $(BINDIR)/mona.img $(BINDIR)/root/NEKO.JPG NEKO.JPG
+	$(BINDIR)/fat_write.exe $(BINDIR)/mona.img $(BINDIR)/root/STARTING.JPG STARTING.JPG
+	$(BINDIR)/fat_write.exe $(BINDIR)/mona.img $(BINDIR)/root/BLACK.BMP BLACK.BMP
+	$(BINDIR)/fat_write.exe $(BINDIR)/mona.img $(BINDIR)/root/WHITE.BMP WHITE.BMP
+	$(BINDIR)/fat_write.exe $(BINDIR)/mona.img $(BINDIR)/root/MONA-12.MNF MONA-12.MNF
+	$(BINDIR)/fat_write.exe $(BINDIR)/mona.img $(APPSDIR)/non-gui/waba/WABA.LIB  APPS/WABA.LIB
+	$(BINDIR)/fat_write.exe $(BINDIR)/mona.img $(APPSDIR)/non-gui/waba/HELLO.WRP APPS/HELLO.WRP
 
 write:
 	cp $(TARGET) /dev/fd0
