fix .data+.rdata / .bbs section (T.Yui)

--- a/Mona/tools/monaelf/Makefile
+++ b/Mona/tools/monaelf/Makefile
@@ -1,35 +1,30 @@
+MONADIR = ../..
+include $(MONADIR)/env/Makefile.inc
 
-MONADIR	= ../..
-
-AS		=	nasmw
-CC		=	gcc
 RM		=	rm -f
-
 OBJ		=	./obj
 
 COPT	=	-c -Wall -pipe -O3 -Wpointer-arith -fno-exceptions -fno-rtti \
 			-fomit-frame-pointer -fsigned-char
 
-OBJS	=	$(OBJ)/main.o		$(OBJ)/monaelf.o
+OBJS	=	$(OBJ)/main.o     $(OBJ)/monaelf.o
 BINS	=	$(MONADIR)/bin/monaelf
 
 
 all: $(OBJ) $(BINS)
 
-
 $(OBJ):
 	mkdir $(OBJ)
 
-
 $(BINS): $(OBJS)
-	$(CC) $(OBJS) -o $@
+	$(CXX) $(OBJS) -o $@
 
 
-$(OBJ)/main.o:		./main.c
-	$(CC) $(COPT) -o $@ $<
+$(OBJ)/main.o:		./main.c ./monaelf.h
+	$(CXX) $(COPT) -o $@ $<
 
-$(OBJ)/monaelf.o:	./monaelf.c
-	$(CC) $(COPT) -o $@ $<
+$(OBJ)/monaelf.o:	./monaelf.c ./elfhdr.h ./monaelf.h
+	$(CXX) $(COPT) -o $@ $<
 
 
 clean:
