Modified Files: 	ChangeLog Makefile.in apps/gui/2chAA/Makefile 	apps/gui/fire/Makefile apps/gui/launcher/Makefile 	apps/gui/noiz2bg/Makefile apps/gui/ps/Makefile 	apps/gui/reversi/Makefile apps/non-gui/clock/Makefile 	apps/non-gui/jpegdemo/Makefile apps/non-gui/nic/ne2k/Makefile 	apps/non-gui/noiz2bg/Makefile apps/non-gui/reversi/Makefile 	apps/non-gui/waba/Makefile bin/root/.cvsignore 	bin/root/APPS/.cvsignore samples/gui/bitmap/Makefile 	samples/gui/button/Makefile samples/gui/label/Makefile 	samples/non-gui/hello/Makefile samples/non-gui/kanji/Makefile 	src/kernel/Makefile src/servers/1linesh/Makefile 	src/servers/gui/Makefile src/servers/key/Makefile 	src/servers/mouse/Makefile src/servers/shell/Makefile 	tools/fat_write/Makefile tools/monaelf/Makefile Added Files: 	bin/Makefile

--- a/Mona/apps/gui/2chAA/Makefile
+++ b/Mona/apps/gui/2chAA/Makefile
@@ -15,6 +15,7 @@ $(TARGET): $(OBJECTS) $(LIBDIR)/libgui.a $(LIBDIR)/libmonapi.a $(LIBDIR)/libmona
 	$(LD) $(LFLAGS) $(OBJECTS) -L$(LIBDIR) -o $@ $(LINK)
 	objcopy $(OFLAGS) $@
 	$(STRIP) $@
+	$(BINDIR)/monaelf $@
 
 install: all
 	cp -u $(TARGET) $(BINDIR)/root/APPS
