--- a/Mona/apps/non-gui/jpegdemo/Makefile
+++ b/Mona/apps/non-gui/jpegdemo/Makefile
@@ -13,6 +13,7 @@ $(TARGET): $(OBJECTS) $(LIBDIR)/libmonapi.a $(LIBDIR)/libmonalibc.a $(LIBDIR)/li
 	$(LD) $(LFLAGS) $(OBJECTS) -L$(LIBDIR) -o $@ $(LINK)
 	objcopy $(OFLAGS) $@
 	$(STRIP) $@
+	$(BINDIR)/monaelf $@
 
 install: all
 	cp -u $(TARGET) $(BINDIR)/root/APPS
