--- a/Mona/apps/non-gui/waba/Makefile
+++ b/Mona/apps/non-gui/waba/Makefile
@@ -13,9 +13,10 @@ $(TARGET): $(OBJECTS) $(LIBDIR)/libmonapi.a $(LIBDIR)/libmonalibc.a
 	$(LD) $(LFLAGS) $(OBJECTS) -L$(LIBDIR) -o $@ $(LINK)
 	objcopy $(OFLAGS) $@
 	$(STRIP) $@
+	$(BINDIR)/monaelf $@
 
 install: all
-	cp -u $(TARGET) $(BINDIR)/root/APPS
+	cp -u $(TARGET) WABA.LIB HELLO.WRP $(BINDIR)/root/APPS
 
 clean :
 	rm -f $(OBJECTS) $(TARGET)
