Modified Files: 	ChangeLog bin/Makefile bin/fat_template.img 	tools/fat_write/Makefile tools/fat_write/fat.cpp 	tools/fat_write/main.cpp

--- a/Mona/bin/Makefile
+++ b/Mona/bin/Makefile
@@ -1,14 +1,17 @@
 TARGET = mona.img
 
 ROOT_FILES = `cd root; ls *.*`
-APP_FILES  = `cd root; ls APPS/*.*`
 SVR_FILES  = `cd root; ls SERVERS/*.*`
+APP_FILES  = `cd root; ls APPS/*.*`
 
 all:
-	(cat firstboot.bin;dd if=fat_template.img bs=512 skip=1) > $(TARGET)
+	cp fat_template.img $(TARGET)
+	./fat_write --mbr $(TARGET) firstboot.bin
+	./fat_write --mkdir $(TARGET) SERVERS
+	./fat_write --mkdir $(TARGET) APPS
 	@for file in $(ROOT_FILES); do echo "Writing: "$$file"..."; ./fat_write $(TARGET) root/$$file $$file; done
-	@for file in $(APP_FILES) ; do echo "Writing: "$$file"..."; ./fat_write $(TARGET) root/$$file $$file; done
 	@for file in $(SVR_FILES) ; do echo "Writing: "$$file"..."; ./fat_write $(TARGET) root/$$file $$file; done
+	@for file in $(APP_FILES) ; do echo "Writing: "$$file"..."; ./fat_write $(TARGET) root/$$file $$file; done
 	@echo "Done."
 
 write:
