Modified Files: 	ChangeLog apps/gui/2chAA/Makefile apps/gui/fire/Makefile 	apps/gui/launcher/Makefile apps/gui/noiz2bg/Makefile 	apps/gui/ps/Makefile apps/gui/reversi/Makefile 	apps/non-gui/clock/Makefile apps/non-gui/jpegdemo/Makefile 	apps/non-gui/nic/ne2k/Makefile apps/non-gui/noiz2bg/Makefile 	apps/non-gui/reversi/Makefile apps/non-gui/tube/Makefile 	apps/non-gui/waba/Makefile bin/Makefile 	samples/gui/bitmap/Makefile samples/gui/button/Makefile 	samples/gui/label/Makefile samples/non-gui/hello/Makefile 	samples/non-gui/kanji/Makefile src/servers/1linesh/Makefile 	src/servers/gui/Makefile src/servers/key/Makefile 	src/servers/mouse/Makefile src/servers/shell/Makefile

--- a/Mona/apps/gui/2chAA/Makefile
+++ b/Mona/apps/gui/2chAA/Makefile
@@ -18,9 +18,10 @@ $(TARGET): $(OBJECTS) $(LIBDIR)/libgui.a $(LIBDIR)/libmonapi.a $(LIBDIR)/libmona
 	$(BINDIR)/monaelf $@
 
 install: all
+	mkdir -p $(BINDIR)/root/APPS
 	cp -u $(TARGET) $(BINDIR)/root/APPS
 
-clean :
+clean:
 	rm -f $(OBJECTS) $(TARGET)
 
 .SUFFIXES: .cpp .o
