--- a/Mona/apps/non-gui/tube/Makefile
+++ b/Mona/apps/non-gui/tube/Makefile
@@ -29,6 +29,7 @@ $(BINS): $(OBJS)
 	$(BINDIR)/monaelf $@
 
 install: all
+	mkdir -p $(BINDIR)/root/APPS
 	cp -u $(BINS) $(BINDIR)/root/APPS
 
 clean:
