Modified Files: 	ChangeLog apps/gui/launcher/Form1.cpp 	apps/gui/reversi/Makefile apps/gui/reversi/Piece.h 	apps/gui/reversi/ReversiForm.cpp bin/Makefile 	include/gui/System/String.h src/lib/gui/System/String.cpp 	src/lib/monapi/System.cpp src/servers/gui/main.cpp 	src/servers/shell/main.cpp Added Files: 	apps/gui/reversi/RED.BMP apps/gui/reversi/WHITE.BMP Removed Files: 	bin/root/BLACK.BMP bin/root/WHITE.BMP

--- a/Mona/apps/gui/reversi/Makefile
+++ b/Mona/apps/gui/reversi/Makefile
@@ -1,4 +1,5 @@
 TARGET  = GREVERSI.ELF
+BUNDLE  = $(BINDIR)/root/APPS/GREVERSI.APP
 SOURCES = ReversiForm.cpp ReversiBoard.cpp Piece.cpp
 
 MONADIR = ../../..
@@ -18,8 +19,8 @@ $(TARGET): $(OBJECTS) $(LIBDIR)/libgui.a $(LIBDIR)/libmonapi.a $(LIBDIR)/libmona
 	$(BINDIR)/monaelf $@
 
 install: all
-	mkdir -p $(BINDIR)/root/APPS
-	cp -u $(TARGET) $(BINDIR)/root/APPS
+	mkdir -p $(BUNDLE)
+	cp -u $(TARGET) RED.BMP WHITE.BMP $(BUNDLE)
 
 clean:
 	rm -f $(OBJECTS) $(TARGET)
