Modified Files: 	bin/Makefile tools/fat_write/main.cpp

--- a/Mona/bin/Makefile
+++ b/Mona/bin/Makefile
@@ -6,13 +6,13 @@ APP_FILES  = `cd root; ls APPS/*.ELF APPS/*.LIB APPS/*.WRP`
 
 all:
 	cp fat_template.img $(TARGET)
-	./fat_write --mbr $(TARGET) firstboot.bin
-	./fat_write --mkdir $(TARGET) SERVERS
-	./fat_write --mkdir $(TARGET) APPS
+	./fat_write $(TARGET) --mbr firstboot.bin
+	./fat_write $(TARGET) --mkdir SERVERS
+	./fat_write $(TARGET) --mkdir APPS
 	@for file in $(ROOT_FILES); do echo "Writing: "$$file"..."; ./fat_write $(TARGET) root/$$file $$file; done
 	@for file in $(SVR_FILES) ; do echo "Writing: "$$file"..."; ./fat_write $(TARGET) root/$$file $$file; done
 	@for file in $(APP_FILES) ; do echo "Writing: "$$file"..."; ./fat_write $(TARGET) root/$$file $$file; done
-	./fat_write --mkdir $(TARGET) APPS/GREVERSI.APP
+	./fat_write $(TARGET) --mkdir APPS/GREVERSI.APP
 	@for file in `cd root; ls APPS/GREVERSI.APP/*.*`; do echo "Writing: "$$file"..."; ./fat_write $(TARGET) root/$$file $$file; done
 	@echo "Done."
 
