.env add host defines (T.Yui)

--- a/Mona/env/cygwin.env
+++ b/Mona/env/cygwin.env
@@ -5,7 +5,7 @@ LD       = ld
 STRIP    = strip
 AR       = ar cvru
 RANLIB   = ranlib
-CXXFLAGS = -nostdlib -fno-exceptions  -fno-rtti -Wall -O3 -DDEBUG_BUILD
+CXXFLAGS = -nostdlib -fno-exceptions  -fno-rtti -Wall -O3 -DDEBUG_BUILD -DHOST_CYGWIN
 EXEEXT   = .exe
 NFLAGS   = -f win32
 USER_START_FUNCTION = _user_start
