--- a/Mona/env/linux2.x.env
+++ b/Mona/env/linux2.x.env
@@ -5,7 +5,7 @@ LD       = ld
 STRIP    = strip
 AR       = ar cvru
 RANLIB   = ranlib
-CXXFLAGS = -nostdlib -fno-exceptions -fno-rtti -fno-builtin -Wall -c -DNO_NEW_DELETE -DGCC29 -O3
+CXXFLAGS = -nostdlib -fno-exceptions -fno-rtti -fno-builtin -Wall -c -DNO_NEW_DELETE -DGCC29 -O3 -DHOST_LINUX2
 NFLAGS   = -DBUILD_ON_LINUX -f elf
 EXEEXT   =
 USER_START_FUNCTION = user_start
