--- a/Mona/env/djgpp.env
+++ b/Mona/env/djgpp.env
@@ -6,5 +6,5 @@ LD       = ${DJGPP_HOME_H}/bin/ld
 STRIP    = ${DJGPP_HOME_H}/bin/strip
 AR       = ${DJGPP_HOME_H}/bin/ar cvru
 RANLIB   = ${DJGPP_HOME_H}/bin/ranlib
-CXXFLAGS = -nostdlib -fno-exceptions -fno-rtti -ffreestanding -fno-builtin -Wall -c -O3
+CXXFLAGS = -nostdlib -fno-exceptions -fno-rtti -ffreestanding -fno-builtin -Wall -c -O3 -DHOST_DJGPP
 EXEEXT   = .exe
