Modified Files: 	ChangeLog apps/gui/2chAA/Makefile apps/gui/fire/Makefile 	apps/gui/launcher/Makefile apps/gui/noiz2bg/Makefile 	apps/gui/ps/Makefile apps/gui/reversi/Makefile 	apps/non-gui/Makefile apps/non-gui/jpegdemo/jpegdemo.cpp 	apps/non-gui/noiz2bg/noiz2bg.cpp env/cygwin.env env/djgpp.env 	env/linux2.x.env env/linux3.x.env env/mingw.env 	include/monapi/Color.h samples/gui/bitmap/Makefile 	samples/gui/button/Makefile samples/gui/label/Makefile 	src/kernel/BitMap.cpp src/kernel/BitMap.h 	src/kernel/DiskDriver.h src/kernel/FDCDriver.cpp 	src/kernel/FDCDriver.h src/kernel/FSOperation.h 	src/kernel/GDTUtil.cpp src/kernel/GraphicalConsole.cpp 	src/kernel/GraphicalConsole.h src/kernel/IDManager.cpp 	src/kernel/IDManager.h src/kernel/IDTUtil.cpp 	src/kernel/IDTUtil.h src/kernel/KeyBoardManager.h 	src/kernel/LogConsole.cpp src/kernel/LogConsole.h 	src/kernel/Makefile src/kernel/MemoryManager.cpp 	src/kernel/Mutex.cpp src/kernel/Mutex.h 	src/kernel/PageManager.cpp src/kernel/PageManager.h 	src/kernel/Process.cpp src/kernel/Process.h 	src/kernel/Segments.cpp src/kernel/Segments.h 	src/kernel/Semaphore.cpp src/kernel/VesaConsole.cpp 	src/kernel/VesaConsole.h src/kernel/VirtualConsole.h 	src/kernel/checker.cpp src/kernel/cstart.cpp 	src/kernel/elf.cpp src/kernel/fat.cpp src/kernel/fs.cpp 	src/kernel/global.h src/kernel/ihandlers.cpp 	src/kernel/info.cpp src/kernel/io.cpp src/kernel/io.h 	src/kernel/kernel.cpp src/kernel/kernel.h 	src/kernel/operator.cpp src/kernel/operator.h 	src/kernel/pic.cpp src/kernel/pic.h src/kernel/purevirtual.cpp 	src/kernel/secondboot.asm src/kernel/string.cpp 	src/kernel/string.h src/kernel/syscalls.cpp 	src/kernel/syscalls.h src/kernel/sysresource.cpp 	src/kernel/sysresource.h src/kernel/test_higepon.cpp 	src/kernel/tester.h src/kernel/z.cpp src/kernel/z.h 	src/lib/gui/Makefile src/lib/gui/System/Mona/Forms/Control.cpp 	src/servers/gui/main.cpp tools/fat_write/fat.cpp 	tools/fat_write/fat.h tools/fat_write/file.h Added Files: 	tools/fat_write/t

--- a/Mona/apps/gui/fire/Makefile
+++ b/Mona/apps/gui/fire/Makefile
@@ -8,7 +8,7 @@ OBJECTS += fire.o
 INCLUDE = -I$(INCDIR)
 LINK    = -lgui -lmonapi -lmonalibc
 
-CXXFLAGS += -DMONA -DDEBUG
+CXXFLAGS += -DDEBUG
 
 all: $(TARGET)
 
