--- a/Mona/apps/non-gui/Makefile
+++ b/Mona/apps/non-gui/Makefile
@@ -5,6 +5,7 @@ all:
 #	@cd clock; $(MAKE) $@
 	@cd nic; $(MAKE) $@
 	@cd waba; $(MAKE) $@
+	@cd tube; $(MAKE) $@
 
 install:
 	@cd noiz2bg; $(MAKE) $@
