--- a/Mona/env/linux3.x.env
+++ b/Mona/env/linux3.x.env
@@ -5,7 +5,7 @@ LD       = ld
 STRIP    = strip
 AR       = ar cvru
 RANLIB   = ranlib
-CXXFLAGS = -nostdlib -fno-exceptions -fno-rtti -fno-builtin -Wall -c -g -O3 -DHOST_LINUX3
+CXXFLAGS = -nostdlib -fno-exceptions -fno-rtti -fno-builtin -Wall -c -g -O3 -DMONA -DDEBUG_BUILD -DHOST_LINUX3
 NFLAGS   = -DBUILD_ON_LINUX -f elf
 EXEEXT   =
 USER_START_FUNCTION = user_start
