--- a/Mona/apps/gui/reversi/Makefile
+++ b/Mona/apps/gui/reversi/Makefile
@@ -8,7 +8,7 @@ include $(MONADIR)/env/monapi.inc
 INCLUDE = -I$(INCDIR)
 LINK    = -lgui -lmonapi -lmonalibc
 
-CXXFLAGS += -DMONA -DDEBUG
+CXXFLAGS += -DDEBUG
 
 all: $(TARGET)
 
