--- a/Mona/env/mingw.env
+++ b/Mona/env/mingw.env
@@ -5,7 +5,7 @@ LD       = ld
 STRIP    = strip
 AR       = ar cvru
 RANLIB   = ranlib
-CXXFLAGS = -nostdlib -fno-exceptions  -fno-rtti -Wall -O3 -DHOST_MINGW
+CXXFLAGS = -nostdlib -fno-exceptions  -fno-rtti -Wall -O3 -DMONA -DDEBUG_BUILD -DHOST_MINGW
 EXEEXT   = .exe
 NFLAGS   = -f win32
 USER_START_FUNCTION = _user_start
